15072
#3121 is closely related

given this script containing an error:
{code}
  ~> cat S.scala
#!/bin/sh
exec scala $$0 $$@
!#

println(1)
println(2)
println(3)
prizzle(4)
println(5)
{code}

the 2.7 script runner locates the error properly:
{code}
  ~> /usr/local/scala-2.7.7.final/bin/scala S.scala           
(fragment of S.scala):5: error: not found: value prizzle
prizzle(4)
 ^
one error found
!!!
discarding <script preamble>
{code}

but the 2.8 script runner reports the error as occurring in a different line:
{code}
  ~> /usr/local/scala-2.8.0.Beta1-prerelease/bin/scala S.scala
(fragment of S.scala):2: error: not found: value prizzle
println(1)
    ^
one error found
!!!
discarding <script preamble>
{code}
